--- a/connect4.css
+++ b/connect4.css
@@ -4,15 +4,40 @@
   width: 50px;
   height: 50px;
   border: solid 1px #666;
+  border-radius: 100px;
+  background-color: white;
 }
 
+#game {
+  padding: 20px;
+  width: fit-content;
+  border-radius: 3px;
+  background-color: rgb(111, 190, 233);
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 100px;
+}
 /* pieces are div within game table cells: draw as colored circles */
 
 .piece {
-  margin: 5px;
-  width: 80%;
-  height: 80%;
+  width: 100%;
+  height: 100%;
   border-radius: 50%;
+  transition: all 0.5s ease-in-out;
+}
+
+.piece {
+  animation-name: fall-animation;
+  animation-duration: 750ms;
+}
+
+@keyframes fall-animation {
+  from {
+      transform: translateY(-285px);
+  }
+  to {
+      transform: translateY(0);
+  }
 }
 
 /* column-top is table row of clickable areas for each column */
@@ -23,4 +48,73 @@
 
 #column-top td:hover {
   background-color: gold;
+}
+
+#form {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 470px;
+
+}
+
+.form-items {
+  border: none;
+  border-bottom: grey solid 2px;
+  background-color: lightgray;
+  border-radius: 2px;
+  height: 30px;
+  font-size: 14px;
+}
+
+#start-game {
+  height: 34px;
+}
+
+div #player-turn {
+  margin-top: 50px;
+  font-size: 25px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  border: grey solid 1px;
+  border-radius: 3px;
+  box-shadow: grey 0px 0px 10px -3px;
+  width: 430px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
+
+.custom-alert {
+  display: none; /* hide the alert by default */
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  box-shadow: 0 0 10px #ccc;
+  padding: 20px;
+  border-radius: 3px;
+  text-align: center;
+}
+
+.custom-alert-header {
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+.custom-alert-body {
+  margin-bottom: 20px;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.custom-alert-button {
+  background-color: grey;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
 }
