--- a/connect4.css
+++ b/connect4.css
@@ -1,4 +1,58 @@
 /* game board table */
+body{
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  margin-top: 50px;
+}
+.form-items {
+  border: none;
+  margin-right:  10px;
+  border-bottom: rgb(214, 214, 214) 4px solid;
+  height:40px;
+  font-size: 14px;
+  transition: border .5s ease-in-out;
+  text-transform: uppercase;
+  font-weight: 700;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  outline: none;
+}
+
+#form {
+  width: 54%;
+  min-width: 475px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#start-game {
+  height: 46px;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.form-items:hover {
+  border-bottom: rgb(135, 250, 210) 4px solid;
+}
+
+#game-container {
+  background-color: whitesmoke;
+  box-shadow: 0px 0px 10px -3px rgb(187, 187, 187);
+  border-radius: 3px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  min-width: 450px;
+  padding: 2%;
+  padding-bottom: 5%;
+  margin-top: 10px;
+}
 
 #board td {
   width: 50px;
@@ -12,10 +66,11 @@
   padding: 20px;
   width: fit-content;
   border-radius: 3px;
-  background-color: rgb(111, 190, 233);
+  background-color: rgba(76, 76, 76, 0.659);
   margin-left: auto;
   margin-right: auto;
   margin-top: 100px;
+  display: none;
 }
 /* pieces are div within game table cells: draw as colored circles */
 
@@ -44,35 +99,13 @@
 
 #column-top td {
   border: dashed 1px lightgray;
+  transition: background-color .5s ease-in-out;
 }
 
 #column-top td:hover {
-  background-color: gold;
+  background-color: rgb(135, 250, 210)
 }
 
-#form {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  margin-left: auto;
-  margin-right: auto;
-  width: 470px;
-
-}
-
-.form-items {
-  border: none;
-  border-bottom: grey solid 2px;
-  background-color: lightgray;
-  border-radius: 2px;
-  height: 30px;
-  font-size: 14px;
-}
-
-#start-game {
-  height: 34px;
-}
 
 div #player-turn {
   margin-top: 50px;
