--- a/connect4.css
+++ b/connect4.css
@@ -1,10 +1,12 @@
 /* game board table */
+
 body{
   width: 100%;
   height: 100%;
   overflow: hidden;
   margin-top: 50px;
 }
+
 .form-items {
   border: none;
   margin-right:  10px;
@@ -150,4 +152,20 @@ div #player-turn {
   border: none;
   border-radius: 3px;
   cursor: pointer;
+}
+
+
+@media only screen and (max-device-width: 400px) {
+  body {
+    margin-top: 150px;
+    width: 100%;
+    overflow: hidden;
+    zoom: 1.7;
+  }
+
+  #start-game {
+    height: 49px;
+    text-transform: uppercase;
+    font-weight: 700;
+  }
 }
