--- a/connect4.css
+++ b/connect4.css
@@ -156,19 +156,14 @@ div #player-turn {
 
 
 @media only screen and (max-device-width: 400px) {
-  /* body {
-    margin-top: 150px;
-    width: 100%;
-    overflow: hidden;
-    zoom: 1.7;
-  } */
-
+  body {
+    zoom: -1;
+  }
   #start-game {
-    height: 49px;
+    height: 50px;
     text-transform: uppercase;
     font-weight: 700;
   }
-
   .form-items{
     border-radius: 0px;
   }
