--- a/connect4.css
+++ b/connect4.css
@@ -164,7 +164,7 @@ div #player-turn {
   }
 
   #start-game {
-    height: 50.2px;
+    height: 50px;
     text-transform: uppercase;
     font-weight: 700;
   }
@@ -172,5 +172,9 @@ div #player-turn {
   .form-items{
     border-radius: 0px;
     -webkit-text-size-adjust: 100%;
+    -webkit-user-select: auto;
+    -moz-user-select: auto;
+    -ms-user-select: auto;
+    user-select: auto;
   }
 }
