--- a/connect4.css
+++ b/connect4.css
@@ -155,16 +155,13 @@ div #player-turn {
 }
 
 
-@media only screen and (max-device-width: 400px) {
-  body {
-    margin-top: 150px;
-    width: 100%;
-    overflow: hidden;
-    zoom: 2;
+/* @media only screen and (max-device-width: 400px) {
+  body{
+    width: max-content;
   }
 
   #start-game {
-    height: 50px;
+    height: 50.2px;
     text-transform: uppercase;
     font-weight: 700;
   }
@@ -172,4 +169,4 @@ div #player-turn {
   .form-items{
     border-radius: 0px;
   }
-}
+} */
