--- a/connect4.css
+++ b/connect4.css
@@ -12,10 +12,10 @@ body{
   margin-right:  10px;
   border-bottom: rgb(214, 214, 214) 4px solid;
   height:40px;
-  font-size: 16px;
+  font-size: 18px;
   transition: border .5s ease-in-out;
   text-transform: uppercase;
-  font-weight: 700;
+  font-weight: 500;
   width: 100%;
   margin-left: auto;
   margin-right: auto;
@@ -156,6 +156,12 @@ div #player-turn {
 
 
 @media only screen and (max-device-width: 400px) {
+  body {
+    margin-top: 150px;
+    width: 100%;
+    overflow: hidden;
+    zoom: 2;
+  }
   #start-game {
     height: 50.2px;
     text-transform: uppercase;
