--- a/connect4.css
+++ b/connect4.css
@@ -11,6 +11,7 @@ body{
   border: none;
   margin-right:  10px;
   border-bottom: rgb(214, 214, 214) 4px solid;
+  border-top: rgb(214, 214, 214) 4px solid;
   height:40px;
   font-size: 16px;
   transition: border .5s ease-in-out;
@@ -34,13 +35,14 @@ body{
 }
 
 #start-game {
-  height: 46px;
+  height: 50px;
   text-transform: uppercase;
   font-weight: 700;
 }
 
 .form-items:hover {
   border-bottom: rgb(135, 250, 210) 4px solid;
+  border-top: rgb(135, 250, 210) 4px solid;
 }
 
 #game-container {
@@ -113,9 +115,8 @@ div #player-turn {
   margin-top: 50px;
   font-size: 25px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  border: grey solid 1px;
-  border-radius: 3px;
-  box-shadow: grey 0px 0px 10px -3px;
+  border-top: grey solid 4px;
+  border-bottom: grey solid 4px;
   width: 430px;
   margin-left: auto;
   margin-right: auto;
@@ -156,14 +157,14 @@ div #player-turn {
 
 
 @media only screen and (max-device-width: 400px) {
-  /* body {
+  body {
     margin-top: 150px;
     width: 100%;
     overflow: hidden;
-    zoom: 2;
-  } */
+    zoom: 1.7;
+  }
   #start-game {
-    height: 50.3px;
+    height: 50.5px;
     text-transform: uppercase;
     font-weight: 700;
   }
